--- a/src/db/app.json
+++ b/src/db/app.json
@@ -202,7 +202,7 @@
   "events": [
     {
       "id": 1,
-      "date": "2021-01-01",
+      "date": "2022-12-20",
       "hour": "12:30",
       "table": 1,
       "repeat": false,
@@ -251,5 +251,16 @@
       "starters": ["lemonWater"]
     }
   ],
-  "bookings": []
+  "bookings": [
+    {
+      "id": 1,
+      "date": "2022-12-20",
+      "hour": "12:30",
+      "table": 1,
+      "repeat": false,
+      "duration": 4,
+      "ppl": 3,
+      "starters": []
+    }
+  ]
 }
